source/tests/errors/interpolation_keywords.apex
import os
os.output("Result: {true}")